2006-02-09 Takuro Ashie <ashie@homa.ne.jp>

	* configure.ac: Version-1.0.0.

2006-02-06 Takuro Ashie <ashie@homa.ne.jp>

	* README: Add contents.

2006-02-02 Takuro Ashie <ashie@homa.ne.jp>

	* Version-0.2.0.

2006-02-01 Hiroyuki Ikezoe <poincare@ikezoe.net>

	* src/configure.ac:  append AC_SUBST(LIBTOOL_EXPORT_OPTIONS) for 
	preventing "@LIBTOOL_EXPORT_OPTIONS@: No such file or directory"

2006-01-31 Takuro Ashie <ashie@homa.ne.jp>

	* configure.ac: Bump version number.

2006-01-31 Takuro Ashie <ashie@homa.ne.jp>

	* src/canna_jrkanji.cpp, src/scim_canna_imengine.cpp,
	  src/scim_canna_imengine_factory.{cpp,h},
	  src/scim_canna_imengine_setup.cpp,
	  src/scim_canna_prefs.h:
	Add preference for initial input mode.
	* po/ja.po: Update.

2006-01-31 Takuro Ashie <ashie@homa.ne.jp>

	* src/scim_canna_imengine.cpp: Call reset() on focus out.

2005-11-09 Takuro Ashie <ashie@homa.ne.jp>

	* src/scim_canna_imengine_factory.cpp:
	Add package name and version into authors text.
	Thank you for your notifying > Masatake YAMATO <jet@gyve.org>

2005-11-08 Takuro Ashie <ashie@homa.ne.jp>

	* src/scim_canna_imengine_factory.cpp: Add help.
	* po/ja.po: Update.

2005-09-26 Takuro Ashie <ashie@homa.ne.jp>

	* AUTHORS, src/scim_canna_imengine_factory.cpp:
	Change order of authors list.

2005-09-01 Takuro Ashie <ashie@homa.ne.jp>

	* src/canna_jrkanji.{cpp,h}, src/scim_canna_imengine.cpp,
	  src/scim_canna_imengine_factory.{cpp,h}, src/scim_canna_prefs.h:
	Add on/off key.

2005-08-31 Takuro Ashie <ashie@homa.ne.jp>

	* src/canna_jrkanji.cpp: Fix indent.

2005-08-30 Takuro Ashie <ashie@homa.ne.jp>

	* configure.ac: Version-0.1.3.

2005-08-30 Takuro Ashie <ashie@homa.ne.jp>

	* data/scim-canna.png: Add.

2005-08-29 Takuro Ashie <ashie@homa.ne.jp>

	* configured.ac: Version-0.1.2.

2005-08-23 Takuro Ashie <ashie@homa.ne.jp>

	* src/scim_canna_imengine_factory.cpp: Add authors.

2005-08-22 Takuro Ashie <ashie@homa.ne.jp>
