@@ -2,6 +2,13 @@
 
 	* configure.ac: Version-1.0.0.
 
+2006-02-07 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/scim_canna_action.{cpp,h}: Remove.
+	* src/Makefile.am, src/scim_canna_imengine.{cpp,h},
+	  src/scim_canna_imengine_factory.{cpp,h}:
+	Remove needless code.
+
 2006-02-06 Takuro Ashie <ashie@homa.ne.jp>
 
 	* README: Add contents.
